# netdump

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
crates/netdump-afpacket/: Cargo.toml
crates/netdump-afpacket/src/: lib.rs
crates/netdump-cbpf/: Cargo.toml
crates/netdump-cbpf/src/: lib.rs  vm.rs
crates/netdump-cli/: Cargo.toml
crates/netdump-cli/src/: main.rs
crates/netdump-core/: Cargo.toml
crates/netdump-core/src/: lib.rs
crates/netdump-filter/: Cargo.toml
crates/netdump-filter/src/: assembler.rs  compiler.rs  filter.pest  lib.rs  types.rs
crates/netdump-filter/tests/: compiler_codegen.rs  cross_validate_pcap.rs
crates/netdump-filter/tests/common/: mod.rs
docs/: architecture.md
